--- a/11-02.md
+++ b/11-02.md
@@ -23,6 +23,10 @@
 
 *Приведите ответ в свободной форме.*
 
+Какие проблемы призвано решить
+кэширование?
+Кеширование помогает решить множество проблем - проблему ограниченности ресурсов и производительности оно решает за счет складывания в кэш данных, к которым чаще всего происходит обращение. Это увеличивает скорость, экономит ресурсы. Также кеширование позволяет сглаживать суточные или сезонные повышения объема трафика. Сам принцип кеширования используется практически повсеместно в той или иной мере. Мы ежедневно сталкиваемся с кешированием DNS запросов, часто открываемых страниц в браузере, процессор постоянно кеширует операции итд.
+
 ---
 
 ### Задание 2. Memcached
@@ -30,6 +34,8 @@
 Установите и запустите memcached.
 
 *Приведите скриншот systemctl status memcached, где будет видно, что memcached запущен.*
+
+![Снимок экрана 2023-05-17 170939](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/5842df18-b1b9-4b43-a459-54635eed7991)
 
 ---
 
@@ -39,6 +45,11 @@
 
 *Приведите скриншот, на котором видно, что спустя 5 секунд ключи удалились из базы.*
 
+Здесь я записал с TTL 5 - проверил - записи уже нет - затем записал с TTL 60 - проверил - запись еще была - а через минуту ее уже не было в ответе
+
+![Снимок экрана 2023-05-17 174117](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/44e30d73-ac0d-47db-a0cb-4c82b19378fd)
+
+
 ---
 
 ### Задание 4. Запись данных в Redis
@@ -47,12 +58,8 @@
 
 *Через redis-cli достаньте все записанные ключи и значения из базы, приведите скриншот этой операции.*
 
+![Снимок экрана 2023-05-17 175710](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/020e2b27-cb9c-4e95-8b94-5095be1dfec6)
 
-## Дополнительные задания (со звёздочкой*)
-Эти задания дополнительные, то есть не обязательные к выполнению, и никак не повлияют на получение вами зачёта по этому домашнему заданию. Вы можете их выполнить, если хотите глубже разобраться в материале.
+![Снимок экрана 2023-05-17 180214](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/d1a53f78-0740-4e82-9c8e-be054f6ea9be)
 
-### Задание 5*. Работа с числами 
 
-Запишите в Redis ключ key5 со значением типа "int" равным числу 5. Увеличьте его на 5, чтобы в итоге в значении лежало число 10.  
-
-*Приведите скриншот, где будут проделаны все операции и будет видно, что значение key5 стало равно 10.*
