--- a/11-03.md
+++ b/11-03.md
@@ -1,40 +1,13 @@
 # Домашнее задание к занятию «ELK»
 
-### Инструкция по выполнению домашнего задания
-
-1. Сделайте fork [репозитория c шаблоном решения](https://github.com/netology-code/sys-pattern-homework) к себе в Github и переименуйте его по названию или номеру занятия, например, https://github.com/имя-вашего-репозитория/gitlab-hw или https://github.com/имя-вашего-репозитория/8-03-hw).
-2. Выполните клонирование этого репозитория к себе на ПК с помощью команды `git clone`.
-3. Выполните домашнее задание и заполните у себя локально этот файл README.md:
-   - впишите вверху название занятия и ваши фамилию и имя;
-   - в каждом задании добавьте решение в требуемом виде: текст/код/скриншоты/ссылка;
-   - для корректного добавления скриншотов воспользуйтесь инструкцией [«Как вставить скриншот в шаблон с решением»](https://github.com/netology-code/sys-pattern-homework/blob/main/screen-instruction.md);
-   - при оформлении используйте возможности языка разметки md. Коротко об этом можно посмотреть в [инструкции по MarkDown](https://github.com/netology-code/sys-pattern-homework/blob/main/md-instruction.md).
-4. После завершения работы над домашним заданием сделайте коммит (`git commit -m "comment"`) и отправьте его на Github (`git push origin`).
-5. Для проверки домашнего задания преподавателем в личном кабинете прикрепите и отправьте ссылку на решение в виде md-файла в вашем Github.
-6. Любые вопросы задавайте в чате учебной группы и/или в разделе «Вопросы по заданию» в личном кабинете.
-
-Желаем успехов в выполнении домашнего задания.
-
----
-
-## Дополнительные ресурсы
-
-При выполнении задания используйте дополнительные ресурсы:
-- [docker-compose elasticsearch + kibana](11-03/docker-compose.yaml);
-- [поднимаем elk в docker](https://www.elastic.co/guide/en/elasticsearch/reference/7.17/docker.html);
-- [поднимаем elk в docker с filebeat и docker-логами](https://www.sarulabs.com/post/5/2019-08-12/sending-docker-logs-to-elasticsearch-and-kibana-with-filebeat.html);
-- [конфигурируем logstash](https://www.elastic.co/guide/en/logstash/7.17/configuration.html);
-- [плагины filter для logstash](https://www.elastic.co/guide/en/logstash/current/filter-plugins.html);
-- [конфигурируем filebeat](https://www.elastic.co/guide/en/beats/libbeat/5.3/config-file-format.html);
-- [привязываем индексы из elastic в kibana](https://www.elastic.co/guide/en/kibana/7.17/index-patterns.html);
-- [как просматривать логи в kibana](https://www.elastic.co/guide/en/kibana/current/discover.html);
-- [решение ошибки increase vm.max_map_count elasticsearch](https://stackoverflow.com/questions/42889241/how-to-increase-vm-max-map-count).
 
 ### Задание 1. Elasticsearch 
 
 Установите и запустите Elasticsearch, после чего поменяйте параметр cluster_name на случайный. 
 
 *Приведите скриншот команды 'curl -X GET 'localhost:9200/_cluster/health?pretty', сделанной на сервере с установленным Elasticsearch. Где будет виден нестандартный cluster_name*.
+
+![Снимок экрана 2023-05-18 150717](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/76f2a040-d0d1-4281-9ef8-582eee052d81)
 
 ---
 
@@ -44,6 +17,9 @@
 
 *Приведите скриншот интерфейса Kibana на странице http://<ip вашего сервера>:5601/app/dev_tools#/console, где будет выполнен запрос GET /_cluster/health?pretty*.
 
+![Снимок экрана 2023-05-18 151526](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/9ef09553-feef-44e6-b06a-287e83e88eea)
+
+
 ---
 
 ### Задание 3. Logstash
@@ -52,6 +28,12 @@
 
 *Приведите скриншот интерфейса Kibana, на котором видны логи Nginx.*
 
+![Снимок экрана 2023-05-18 160745](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/285f0d06-36d0-4e83-be6c-7b714fd25659)
+
+![Снимок экрана 2023-05-18 160853](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/f066c20b-6898-4934-82dd-68a2eb2f4f0c)
+
+
+
 ---
 
 ### Задание 4. Filebeat. 
@@ -59,6 +41,10 @@
 Установите и запустите Filebeat. Переключите поставку логов Nginx с Logstash на Filebeat. 
 
 *Приведите скриншот интерфейса Kibana, на котором видны логи Nginx, которые были отправлены через Filebeat.*
+
+![Снимок экрана 2023-05-18 211734](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/0467f9b3-e3cc-4fb8-b5f9-d1835f0e79a2)
+
+
 
 
 ## Дополнительные задания (со звёздочкой*)
