--- a/11-01.md
+++ b/11-01.md
@@ -18,7 +18,7 @@
 
 #### Ответ: 
 
-** Ответ: 
+***Ответ:***
 
 1.1.* Хеширование стало занимать длительно время, какое API можно использовать для ускорения работы? 
 
