--- a/11-01.md
+++ b/11-01.md
@@ -16,30 +16,43 @@
 1.1. Бюджетирование проектов с дальнейшим формированием финансовых аналитических отчётов и прогнозирования рисков.
 СУБД должна гарантировать целостность и чёткую структуру данных.
 
-#### Ответ: 
 
-***Ответ:***
+***Ответ: В этом случае основная задача гарантировать целостность и чёткую структуру данных - то есть база должна быть надежной и обечпечивать неизменяемость данных. Это характерные требования класса CA к которым относятся базы MySQL PostgreSQL***
 
 1.1.* Хеширование стало занимать длительно время, какое API можно использовать для ускорения работы? 
+
+***Ответ:***
 
 1.2. Под каждый девелоперский проект создаётся отдельный лендинг, и все данные по лидам стекаются в CRM к 
 маркетологам и менеджерам по продажам. Какой тип СУБД лучше использовать для лендингов и для CRM? 
 СУБД должны быть гибкими и быстрыми.
 
+***Ответ:***
+
 1.2.* Можно ли эту задачу закрыть одной СУБД? И если да, то какой именно СУБД и какой реализацией?
+
+***Ответ:***
 
 1.3. Отдел контроля качества решил создать базу по корпоративным нормам и правилам, обучающему материалу 
 и так далее, сформированную согласно структуре компании. СУБД должна иметь простую и понятную структуру.
 
+***Ответ:***
+
 1.3.* Можно ли под эту задачу использовать уже существующую СУБД из задач выше и если да, то как лучше это 
 реализовать?
+
+***Ответ:***
 
 1.4. Департамент логистики нуждается в решении задач по быстрому формированию маршрутов доставки материалов 
 по объектам и распределению курьеров по маршрутам с доставкой документов. СУБД должна уметь быстро работать
 со связями.
 
+***Ответ:***
+
 1.4.* Можно ли к этой СУБД подключить отдел закупок или для них лучше сформировать свою СУБД в связке с СУБД 
 логистов?
+
+***Ответ:***
 
 1.5.* Можно ли все перечисленные выше задачи решить, используя одну СУБД? Если да, то какую именно?
 
