--- a/11-01.md
+++ b/11-01.md
@@ -17,46 +17,38 @@
 СУБД должна гарантировать целостность и чёткую структуру данных.
 
 
-***Ответ: В этом случае основная задача гарантировать целостность и чёткую структуру данных - то есть база должна быть надежной и обечпечивать неизменяемость данных. Это характерные требования класса CA к которым относятся базы MySQL PostgreSQL***
+***Ответ: В этом случае основная задача гарантировать целостность и чёткую структуру данных - то есть база должна быть надежной и обечпечивать неизменяемость данных. Это характерные требования класса CA к которым относятся реляционные базы MySQL PostgreSQL***
 
 1.1.* Хеширование стало занимать длительно время, какое API можно использовать для ускорения работы? 
 
-***Ответ:***
+***Ответ: для ускорения работы используют Memcached (бесплатная высокопроизводительная система кэширования с открытым исходным кодом,которая предназначена для ускорения работы динамических веб-приложений за счет снижения нагрузки на базу данных) а также Redis (remote dictionary server) — это in-memory хранилище структур данных с открытым исходным кодом, используемое в качестве базы данных, кэша и очереди сообщений.
+Оба решения позволяют значительно ускорить работу ***
 
 1.2. Под каждый девелоперский проект создаётся отдельный лендинг, и все данные по лидам стекаются в CRM к 
 маркетологам и менеджерам по продажам. Какой тип СУБД лучше использовать для лендингов и для CRM? 
 СУБД должны быть гибкими и быстрыми.
 
-***Ответ:***
+***Ответ: в этом случае основные требования - гибкость и быстрота. Такому запросу в полной мере отвечают опять же реляционные бд типа PostgresSQL - на ней часто строят системы CRM ***
 
-1.2.* Можно ли эту задачу закрыть одной СУБД? И если да, то какой именно СУБД и какой реализацией?
-
-***Ответ:***
 
 1.3. Отдел контроля качества решил создать базу по корпоративным нормам и правилам, обучающему материалу 
 и так далее, сформированную согласно структуре компании. СУБД должна иметь простую и понятную структуру.
 
-***Ответ:***
+***Ответ: в этом случае акцентируется внимание на простоте БД, понятности структуры, Также, как правило, конторы  постоянно пополняют и изменяют обучающую документацию - поэтому очевидно, что в этом случае речь идет о документо ориентированных базах даненых. Из лекции известно, что характерным придставителем NoSQL баз является MongoDB - это одостаточно популярное решение***
 
-1.3.* Можно ли под эту задачу использовать уже существующую СУБД из задач выше и если да, то как лучше это 
-реализовать?
-
-***Ответ:***
 
 1.4. Департамент логистики нуждается в решении задач по быстрому формированию маршрутов доставки материалов 
 по объектам и распределению курьеров по маршрутам с доставкой документов. СУБД должна уметь быстро работать
 со связями.
 
-***Ответ:***
+***Ответ: со связями быстро работтают графовые NoSQL базы данных, их характерными чертами является быстрота работы со связями - эта как раз актуально для логистов при формировании маршрутов***
 
-1.4.* Можно ли к этой СУБД подключить отдел закупок или для них лучше сформировать свою СУБД в связке с СУБД 
-логистов?
-
-***Ответ:***
 
 1.5.* Можно ли все перечисленные выше задачи решить, используя одну СУБД? Если да, то какую именно?
 
 *Приведите ответ в свободной форме.*
+
+***Ответ: я думаю, что при известной степени доработки все это получится организовать на обычной реляционной базе данных PostgreSQL - да, в некоторых моментах в ущерб быстродействию и производительности, да, сложная настройка, - но работать будет.***
 
 ---
 
@@ -65,9 +57,14 @@
 2.1. Пользователь пополняет баланс счёта телефона, распишите пошагово, какие действия должны произойти для того, чтобы 
 транзакция завершилась успешно. Ориентируйтесь на шесть действий.
 
-2.1.* Какие действия должны произойти, если пополнение счёта телефона происходило бы через автоплатёж?
 
-*Приведите ответ в свободной форме.*
+***Ответ: 
+-введение номера абонента пополняющим
+-введение суммы пополнения (попутно можно проверить лимиты на перевод максимальный и минимальный) 
+-запрос-ответ к ОПСОС о существавании абонента
+-списание денег со счета пополняющего
+-перевод денег оператору сотовой связи
+-получение подтверждения от оператора и отправка подтверждения пополняющему***
 
 ---
 
@@ -75,9 +72,13 @@
 
 3.1. Напишите пять преимуществ SQL-систем по отношению к NoSQL. 
 
-3.1.* Какие, на ваш взгляд, преимущества у NewSQL систем перед SQL и NoSQL.
+***Ответ: 
+Преимущества в необходимости соответствия базы данных требованиям ACID (Atomicity, Consistency, Isolation, Durability — атомарность, непротиворечивость, изолированность, долговечность). 
+отсюда имеем следающие преимущества
+- целостность
+- надежностьЭто позволяет уменьшить вероятность неожиданного поведения системы и обеспечить целостность базы данных. Достигается подобное путём жёсткого определения того, как именно транзакции взаимодействуют с базой данных. Это отличается от подхода, используемого в NoSQL-базах, которые ставят во главу угла гибкость и скорость, а не 100% целостность данных.
 
-*Приведите ответ в свободной форме.*
+Данные, с которыми вы работаете, структурированы, при этом структура не подвержена частым изменением. Если ваша организация не находится в стадии экспоненциального роста, вероятно, не найдётся убедительных причин использовать БД, которая позволяет достаточно вольно обращаться с типами данных и нацелена на обработку огромных объёмов информации.***
 
 ---
 
@@ -89,8 +90,7 @@
 На основе какого критерия будете выбирать тип СУБД и какая модель *распределённых вычислений* 
 здесь справится лучше всего и почему?
 
-*Приведите ответ в свободной форме.*
+***Ответ: ***
 
 ---
 
-Задания,помеченные звёздочкой, — дополнительные, то есть не обязательные к выполнению, и никак не повлияют на получение вами зачёта по этому домашнему заданию. Вы можете их выполнить, если хотите глубже разобраться в материале.
