--- a/11-01.md
+++ b/11-01.md
@@ -76,9 +76,12 @@
 Преимущества в необходимости соответствия базы данных требованиям ACID (Atomicity, Consistency, Isolation, Durability — атомарность, непротиворечивость, изолированность, долговечность). 
 отсюда имеем следающие преимущества
 - целостность
-- надежностьЭто позволяет уменьшить вероятность неожиданного поведения системы и обеспечить целостность базы данных. Достигается подобное путём жёсткого определения того, как именно транзакции взаимодействуют с базой данных. Это отличается от подхода, используемого в NoSQL-базах, которые ставят во главу угла гибкость и скорость, а не 100% целостность данных.
-
-Данные, с которыми вы работаете, структурированы, при этом структура не подвержена частым изменением. Если ваша организация не находится в стадии экспоненциального роста, вероятно, не найдётся убедительных причин использовать БД, которая позволяет достаточно вольно обращаться с типами данных и нацелена на обработку огромных объёмов информации.***
+- надежность
+- строгая структура, не подверженная частым изменениям
+- соблюдение жестких определений, как именно транзакции взаимодействуют с базой данных.
+- меньше вероятность неожиданного поведения системы 
+- много проверенных откатанных решений под разные потребности
+***
 
 ---
 
@@ -90,7 +93,14 @@
 На основе какого критерия будете выбирать тип СУБД и какая модель *распределённых вычислений* 
 здесь справится лучше всего и почему?
 
-***Ответ: ***
+***Ответ: здесь нужно будет отталкиваться от конкретной ситуации
+Существует множество систем для работы с распределенными вычислениями - Hadoop, Vertica, ClickHouse, Exasol, Greenplum, Teradata.
+Согласно их задачам, большинство таких систем используется в корпоративном секторе. НАпример Greenplum базируется на свободной объектно-реляционной базе PostgreSQL с возможностью горизонтального масштабирования и столбцовым хранением данных, которое повышает эффективность их сжатия и снижает трафик для выполнения запросов.
+Ниже небольшие сводные по разным типам решений
+![DB1](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/57ef9062-cde8-440b-972c-6512ebb5043a)
+![DB2](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/3b8a299b-3368-4610-bd23-42a85883f29c)
+
+***
 
 ---
 
