--- a/11-01.md
+++ b/11-01.md
@@ -92,8 +92,7 @@
 - строгая структура, не подверженная частым изменениям
 - соблюдение жестких определений, как именно транзакции взаимодействуют с базой данных.
 - меньше вероятность неожиданного поведения системы 
-- много проверенных откатанных решений под разные потребности
-***
+- много проверенных откатанных решений под разные потребности***
 
 
 ---
