--- a/12-01.md
+++ b/12-01.md
@@ -1,26 +1,6 @@
 # Домашнее задание к занятию «Базы данных»
 
-### Инструкция по выполнению домашнего задания
 
-1. Сделайте fork [репозитория c шаблоном решения](https://github.com/netology-code/sys-pattern-homework) к себе в Github и переименуйте его по названию или номеру занятия, например, https://github.com/имя-вашего-репозитория/gitlab-hw или https://github.com/имя-вашего-репозитория/8-03-hw).
-2. Выполните клонирование этого репозитория к себе на ПК с помощью команды `git clone`.
-3. Выполните домашнее задание и заполните у себя локально этот файл README.md:
-   - впишите вверху название занятия и ваши фамилию и имя;
-   - в каждом задании добавьте решение в требуемом виде: текст/код/скриншоты/ссылка;
-   - для корректного добавления скриншотов воспользуйтесь инструкцией [«Как вставить скриншот в шаблон с решением»](https://github.com/netology-code/sys-pattern-homework/blob/main/screen-instruction.md);
-   - при оформлении используйте возможности языка разметки md. Коротко об этом можно посмотреть в [инструкции по MarkDown](https://github.com/netology-code/sys-pattern-homework/blob/main/md-instruction.md).
-4. После завершения работы над домашним заданием сделайте коммит (`git commit -m "comment"`) и отправьте его на Github (`git push origin`).
-5. Для проверки домашнего задания преподавателем в личном кабинете прикрепите и отправьте ссылку на решение в виде md-файла в вашем Github.
-6. Любые вопросы задавайте в чате учебной группы и/или в разделе «Вопросы по заданию» в личном кабинете.
-
-Желаем успехов в выполнении домашнего задания.
-
----
-### Легенда
-
-Заказчик передал вам [файл в формате Excel](https://github.com/netology-code/sdb-homeworks/blob/main/resources/hw-12-1.xlsx), в котором сформирован отчёт. 
-
-На основе этого отчёта нужно выполнить следующие задания.
 
 ### Задание 1
 
@@ -37,11 +17,53 @@
 - фамилия varchar(50),
 - ...
 - идентификатор структурного подразделения, внешний ключ, integer).
+- 
 
-## Дополнительные задания (со звёздочкой*)
-Эти задания дополнительные, то есть не обязательные к выполнению, и никак не повлияют на получение вами зачёта по этому домашнему заданию. Вы можете их выполнить, если хотите глубже шире разобраться в материале.
+---
+
+Таблица 1 
+Сотрудники 
+
+- идентификатор, первичный ключ, serial,
+- фамилия varchar(50),
+- имя varchar(50),
+- отчество varchar(50),
+- оклад, DECIMAL/NUMERIC
+- дата найма, DATE
+- должность-ID, внешний ключ SMALLINT
+- филиал-ID, внешний ключ SMALLINT
+- подразделение-ID, внешний ключ SMALLINT
+- project-ID, внешний ключ SMALLINT
 
 
-### Задание 2*
+---
+Таблица 2 
+Сотрудники 
 
-Перечислите, какие, на ваш взгляд, в этой денормализованной таблице встречаются функциональные зависимости и какие правила вывода нужно применить, чтобы нормализовать данные.
+---
+Таблица 3 
+Сотрудники 
+
+
+---
+Таблица 4
+Сотрудники 
+
+
+---
+Таблица 5 
+Сотрудники 
+
+
+---
+Таблица 6 
+Сотрудники 
+
+
+---
+Таблица 7 
+Сотрудники 
+
+
+
+
