--- a/12-01.md
+++ b/12-01.md
@@ -31,38 +31,40 @@
 - оклад, DECIMAL/NUMERIC
 - дата найма, DATE
 - должность-ID, внешний ключ SMALLINT
+- ТИП подразделение-ID, внешний ключ SMALLINT
+- СТРУКТУРНОЕ подразделение-ID, внешний ключ SMALLINT
 - филиал-ID, внешний ключ SMALLINT
-- подразделение-ID, внешний ключ SMALLINT
 - project-ID, внешний ключ SMALLINT
 
 
 ---
 Таблица 2 
-Сотрудники 
+Должности
+
 
 ---
-Таблица 3 
-Сотрудники 
+Таблица 3
+Типы подразделений
 
 
 ---
 Таблица 4
-Сотрудники 
+Структурный подразделения
 
 
 ---
-Таблица 5 
-Сотрудники 
+Таблица 5
+Филиалы
 
 
 ---
 Таблица 6 
-Сотрудники 
+Проекты
 
 
 ---
 Таблица 7 
-Сотрудники 
+Адреса филиалов
 
 
 
