--- a/12-01.md
+++ b/12-01.md
@@ -21,51 +21,62 @@
 
 ---
 
-Таблица 1 
+Таблица 1  - workers
 Сотрудники 
 
 - идентификатор, первичный ключ, serial,
 - фамилия varchar(50),
 - имя varchar(50),
 - отчество varchar(50),
-- оклад, DECIMAL/NUMERIC
-- дата найма, DATE
-- должность-ID, внешний ключ SMALLINT
-- ТИП подразделение-ID, внешний ключ SMALLINT
-- СТРУКТУРНОЕ подразделение-ID, внешний ключ SMALLINT
-- филиал-ID, внешний ключ SMALLINT
-- project-ID, внешний ключ SMALLINT
-
+- оклад, decimal/numeric
+- дата найма, date
+- должность-ID, внешний ключ smallint
+- ТИП подразделение-ID, внешний ключ smallint
+- СТРУКТУРНОЕ подразделение-ID, внешний ключ smallint
+- филиал-ID, внешний ключ smallint
+- project-ID, внешний ключ smallint
+- дополнительная информация, text
 
 ---
-Таблица 2 
+Таблица 2  - professions
 Должности
-
+- идентификатор, первичный ключ (суррогатный), serial, smallint
+- название varchar(50),
+- ТИП подразделение-ID, внешний ключ smallint
+- СТРУКТУРНОЕ подразделение-ID, внешний ключ smallint
 
 ---
-Таблица 3
+Таблица 3 - division_type
 Типы подразделений
-
-
----
-Таблица 4
-Структурный подразделения
-
+- идентификатор, первичный ключ (суррогатный), serial, smallint
+- название varchar(100),
 
 ---
-Таблица 5
+Таблица 4 - division
+Структурные подразделения 
+- идентификатор, первичный ключ (суррогатный), serial, smallint
+- ТИП подразделение-ID, внешний ключ smallint
+- название varchar(100),
+
+---
+Таблица 5  - filial
 Филиалы
-
-
----
-Таблица 6 
-Проекты
-
+- идентификатор, первичный ключ (суррогатный), serial, smallint
+- Адрес-ID, внешний ключ smallint
+- сотрудники, внешний ключ smallint
 
 ---
-Таблица 7 
+Таблица 6 - project
+Проекты 
+- идентификатор, первичный ключ (суррогатный), serial, smallint
+- имя проекта, text
+
+---
+Таблица 7 - address
 Адреса филиалов
-
-
-
+- идентификатор, первичный ключ (суррогатный), serial, smallint
+- город varchar(50),
+- улица varchar(50),
+- дом  tinyint,
+- дополнительная информация, text
 
