--- a/12-01.md
+++ b/12-01.md
@@ -21,7 +21,7 @@
 
 ---
 
-Таблица 1  - workers
+### Таблица 1  - workers
 
 Сотрудники 
 
@@ -39,7 +39,7 @@
 - дополнительная информация, text
 
 ---
-Таблица 2  - professions
+### Таблица 2  - professions
 
 Должности
 - идентификатор, первичный ключ (суррогатный), serial, smallint
@@ -48,14 +48,14 @@
 - СТРУКТУРНОЕ подразделение-ID, внешний ключ smallint
 
 ---
-Таблица 3 - division_type
+### Таблица 3 - division_type
 
 Типы подразделений
 - идентификатор, первичный ключ (суррогатный), serial, smallint
 - название varchar(100),
 
 ---
-Таблица 4 - division
+### Таблица 4 - division
 
 Структурные подразделения 
 - идентификатор, первичный ключ (суррогатный), serial, smallint
@@ -63,7 +63,7 @@
 - название varchar(100),
 
 ---
-Таблица 5  - filial
+### Таблица 5  - filial
 
 Филиалы
 - идентификатор, первичный ключ (суррогатный), serial, smallint
@@ -71,14 +71,15 @@
 - сотрудники, внешний ключ smallint
 
 ---
-Таблица 6 - project
+### Таблица 6 - project
 
 Проекты 
 - идентификатор, первичный ключ (суррогатный), serial, smallint
 - имя проекта, text
 
 ---
-Таблица 7 - address
+### Таблица 7 - address
+
 Адреса филиалов
 - идентификатор, первичный ключ (суррогатный), serial, smallint
 - город varchar(50),
