--- a/12-02.md
+++ b/12-02.md
@@ -1,19 +1,3 @@
-# Домашнее задание к занятию «Работа с данными (DDL/DML)»
-
-### Инструкция по выполнению домашнего задания
-
-1. Сделайте fork [репозитория c шаблоном решения](https://github.com/netology-code/sys-pattern-homework) к себе в Github и переименуйте его по названию или номеру занятия, например, https://github.com/имя-вашего-репозитория/gitlab-hw или https://github.com/имя-вашего-репозитория/8-03-hw).
-2. Выполните клонирование этого репозитория к себе на ПК с помощью команды `git clone`.
-3. Выполните домашнее задание и заполните у себя локально этот файл README.md:
-   - впишите вверху название занятия и ваши фамилию и имя;
-   - в каждом задании добавьте решение в требуемом виде: текст/код/скриншоты/ссылка;
-   - для корректного добавления скриншотов воспользуйтесь инструкцией [«Как вставить скриншот в шаблон с решением»](https://github.com/netology-code/sys-pattern-homework/blob/main/screen-instruction.md);
-   - при оформлении используйте возможности языка разметки md. Коротко об этом можно посмотреть в [инструкции по MarkDown](https://github.com/netology-code/sys-pattern-homework/blob/main/md-instruction.md).
-4. После завершения работы над домашним заданием сделайте коммит (`git commit -m "comment"`) и отправьте его на Github (`git push origin`).
-5. Для проверки домашнего задания преподавателем в личном кабинете прикрепите и отправьте ссылку на решение в виде md-файла в вашем Github.
-6. Любые вопросы задавайте в чате учебной группы и/или в разделе «Вопросы по заданию» в личном кабинете.
-
-Желаем успехов в выполнении домашнего задания.
 
 ---
 
@@ -26,9 +10,15 @@
 
 1.3. Выполните запрос на получение списка пользователей в базе данных. (скриншот)
 
+
+![Снимок экрана 2023-05-31 202916](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/12b168ba-fbba-4886-a36c-919dc392cb49)
+
 1.4. Дайте все права для пользователя sys_temp. 
 
 1.5. Выполните запрос на получение списка прав для пользователя sys_temp. (скриншот)
+
+![Снимок экрана 2023-05-31 203347](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/1de889a3-6331-443d-a2fe-981237a11d81)
+
 
 1.6. Переподключитесь к базе данных от имени sys_temp.
 
@@ -42,7 +32,12 @@ ALTER USER 'sys_test'@'localhost' IDENTIFIED WITH mysql_native_password BY 'pass
 
 1.8. При работе в IDE сформируйте ER-диаграмму получившейся базы данных. При работе в командной строке используйте команду для получения всех таблиц базы данных. (скриншот)
 
-*Результатом работы должны быть скриншоты обозначенных заданий, а также простыня со всеми запросами.*
+
+![Снимок экрана 2023-05-31 205932](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/c45c6f74-25a5-4387-9089-e677a52418b4)
+
+![Снимок экрана 2023-05-31 211256](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/770c6aaa-9cbf-4625-8942-c2f8bf9e42e4)
+
+![Снимок экрана 2023-05-31 211531](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/68399790-36ca-4263-bccd-0ade9ea55379)
 
 
 ### Задание 2
@@ -51,14 +46,5 @@ ALTER USER 'sys_test'@'localhost' IDENTIFIED WITH mysql_native_password BY 'pass
 Название таблицы | Название первичного ключа
 customer         | customer_id
 ```
+![Снимок экрана 2023-05-31 210910](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/da065da8-832d-4e5b-99a3-ce1ac39944bd)
 
-
-## Дополнительные задания (со звёздочкой*)
-Эти задания дополнительные, то есть не обязательные к выполнению, и никак не повлияют на получение вами зачёта по этому домашнему заданию. Вы можете их выполнить, если хотите глубже шире разобраться в материале.
-
-### Задание 3*
-3.1. Уберите у пользователя sys_temp права на внесение, изменение и удаление данных из базы sakila.
-
-3.2. Выполните запрос на получение списка прав для пользователя sys_temp. (скриншот)
-
-*Результатом работы должны быть скриншоты обозначенных заданий, а также простыня со всеми запросами.*
