--- a/12-03.md
+++ b/12-03.md
@@ -55,9 +55,10 @@ SELECT inventory_id, rental_date FROM rental r ORDER BY rental_date DESC LIMIT 5
 - все буквы в фамилии и имени из верхнего регистра переведите в нижний регистр,
 - замените буквы 'll' в именах на 'pp'.
 
-SELECT LOWER(first_name) , REPLACE (first_name , 'LL','pp') from customer WHERE first_name = 'Kelly' or first_name = 'Willie'; 
+SELECT REPLACE(LOWER(first_name), 'll', 'pp'), LOWER(last_name) FROM customer WHERE active=1 AND first_name LIKE 'Kelly' OR first_name LIKE 'Willie'
 
-![Снимок экрана 2023-05-31 214737](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/a4b34437-54ec-4764-a527-d78b7a49817a)
+![Снимок экрана 2023-05-31 221049](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/0e3980c4-ad05-43b6-b62e-ff52b70f0bc9)
+
 
 
 
