--- a/12-04.md
+++ b/12-04.md
@@ -1,23 +1,6 @@
 # Домашнее задание к занятию «SQL. Часть 2»
 
-### Инструкция по выполнению домашнего задания
 
-1. Сделайте fork [репозитория c шаблоном решения](https://github.com/netology-code/sys-pattern-homework) к себе в Github и переименуйте его по названию или номеру занятия, например, https://github.com/имя-вашего-репозитория/gitlab-hw или https://github.com/имя-вашего-репозитория/8-03-hw).
-2. Выполните клонирование этого репозитория к себе на ПК с помощью команды `git clone`.
-3. Выполните домашнее задание и заполните у себя локально этот файл README.md:
-   - впишите вверху название занятия и ваши фамилию и имя;
-   - в каждом задании добавьте решение в требуемом виде: текст/код/скриншоты/ссылка;
-   - для корректного добавления скриншотов воспользуйтесь инструкцией [«Как вставить скриншот в шаблон с решением»](https://github.com/netology-code/sys-pattern-homework/blob/main/screen-instruction.md);
-   - при оформлении используйте возможности языка разметки md. Коротко об этом можно посмотреть в [инструкции по MarkDown](https://github.com/netology-code/sys-pattern-homework/blob/main/md-instruction.md).
-4. После завершения работы над домашним заданием сделайте коммит (`git commit -m "comment"`) и отправьте его на Github (`git push origin`).
-5. Для проверки домашнего задания преподавателем в личном кабинете прикрепите и отправьте ссылку на решение в виде md-файла в вашем Github.
-6. Любые вопросы задавайте в чате учебной группы и/или в разделе «Вопросы по заданию» в личном кабинете.
-
-Желаем успехов в выполнении домашнего задания.
-
----
-
-Задание можно выполнить как в любом IDE, так и в командной строке.
 
 ### Задание 1
 
@@ -26,22 +9,25 @@
 - город нахождения магазина;
 - количество пользователей, закреплённых в этом магазине.
 
+SELECT s.store_id , count(c.customer_id) AS total_users, concat(s2.first_name, ' ', s2.last_name) AS worker, c2.city FROM store s 
+INNER JOIN customer c ON c.store_id = s.store_id 
+INNER JOIN staff s2 ON s2.staff_id = s.manager_staff_id 
+INNER JOIN address a ON a.address_id = s.address_id 
+INNER JOIN city c2 ON c2.city_id = a.city_id
+GROUP BY s.store_id HAVING count(c.customer_id) > 300;
+
+
 ### Задание 2
 
 Получите количество фильмов, продолжительность которых больше средней продолжительности всех фильмов.
+
+SELECT COUNT(film_id) FROM film WHERE `length` > (SELECT AVG(`length`) FROM film)
 
 ### Задание 3
 
 Получите информацию, за какой месяц была получена наибольшая сумма платежей, и добавьте информацию по количеству аренд за этот месяц.
 
-
-## Дополнительные задания (со звёздочкой*)
-Эти задания дополнительные, то есть не обязательные к выполнению, и никак не повлияют на получение вами зачёта по этому домашнему заданию. Вы можете их выполнить, если хотите глубже шире разобраться в материале.
-
-### Задание 4*
-
-Посчитайте количество продаж, выполненных каждым продавцом. Добавьте вычисляемую колонку «Премия». Если количество продаж превышает 8000, то значение в колонке будет «Да», иначе должно быть значение «Нет».
-
-### Задание 5*
-
-Найдите фильмы, которые ни разу не брали в аренду.
+SELECT DATE_FORMAT(payment_date, "%M %Y"), COUNT(rental_id), SUM(amount)
+FROM payment p
+GROUP BY DATE_FORMAT(payment_date, "%M %Y")
+ORDER BY SUM(amount) DESC LIMIT 1;
