--- a/12-05.md
+++ b/12-05.md
@@ -19,6 +19,13 @@
 
 Напишите запрос к учебной базе данных, который вернёт процентное отношение общего размера всех индексов к общему размеру всех таблиц.
 
+```sql
+SELECT CONCAT(ROUND(SUM(INDEX_LENGTH) / SUM(DATA_LENGTH) * 100, 1), '%') FROM information_schema.TABLES
+```
+
+![Снимок экрана 2023-06-05 222420](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/8e0a2e12-17df-4e3e-9a49-4fe944406ded)
+
+
 ### Задание 2
 
 Выполните explain analyze следующего запроса:
@@ -30,11 +37,14 @@ where date(p.payment_date) = '2005-07-30' and p.payment_date = r.rental_date and
 - перечислите узкие места;
 - оптимизируйте запрос: внесите корректировки по использованию операторов, при необходимости добавьте индексы.
 
-## Дополнительные задания (со звёздочкой*)
-Эти задания дополнительные, то есть не обязательные к выполнению, и никак не повлияют на получение вами зачёта по этому домашнему заданию. Вы можете их выполнить, если хотите глубже шире разобраться в материале.
+![Снимок экрана 2023-06-05 221148](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/fcece505-58da-4d20-a7e0-a1c837348a87)
 
-### Задание 3*
+Проанализировав запрос, понятно, что обращение к списку фильмов избыточно  - так как по запросу вывоятся платежи в заданный день, А из за этого списка ильмов при выполнении запроса таблицы перемножаются, что ведек к кратному увеличению времени выполнения запроса, То есть наш результат не пострадает, если избавиться от film
 
-Самостоятельно изучите, какие типы индексов используются в PostgreSQL. Перечислите те индексы, которые используются в PostgreSQL, а в MySQL — нет.
+```sql
+select distinct concat(c.last_name, ' ', c.first_name), sum(p.amount) over (partition by c.customer_id)
+from payment p, rental r, customer c, inventory i
+where date(p.payment_date) = '2005-07-30' and p.payment_date = r.rental_date and r.customer_id = c.customer_id and i.inventory_id = r.inventory_id
+```
+![Снимок экрана 2023-06-05 221037](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/63b587dc-0279-4868-950d-b19988e03957)
 
-*Приведите ответ в свободной форме.*
