--- a/12-05.md
+++ b/12-05.md
@@ -35,3 +35,20 @@ where date(p.payment_date) = '2005-07-30' and p.payment_date = r.rental_date and
 ```
 ![Снимок экрана 2023-06-05 221037](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/63b587dc-0279-4868-950d-b19988e03957)
 
+
+
+___________________
+### Дополнение к заданию 2
+
+```sql
+select concat(c.last_name, ' ', c.first_name) AS customer_name, SUM(pay.amount) from customer c
+LEFT JOIN payment pay ON pay.customer_id = c.customer_id
+LEFT JOIN rental ren ON ren.rental_id = pay.rental_id 
+WHERE payment_date >= '2005-07-30' and payment_date < DATE_ADD('2005-07-30', INTERVAL 1 DAY)
+GROUP BY customer_name
+```
+
+![Снимок экрана 2023-06-06 180902](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/f5cd5b8c-454e-44c0-a3cb-26db5b4f60f4)
+
+
+
