--- a/12-06.md
+++ b/12-06.md
@@ -1,19 +1,5 @@
 # Домашнее задание к занятию «Репликация и масштабирование. Часть 1»
 
-### Инструкция по выполнению домашнего задания
-
-1. Сделайте fork [репозитория c шаблоном решения](https://github.com/netology-code/sys-pattern-homework) к себе в Github и переименуйте его по названию или номеру занятия, например, https://github.com/имя-вашего-репозитория/gitlab-hw или https://github.com/имя-вашего-репозитория/8-03-hw).
-2. Выполните клонирование этого репозитория к себе на ПК с помощью команды `git clone`.
-3. Выполните домашнее задание и заполните у себя локально этот файл README.md:
-   - впишите вверху название занятия и ваши фамилию и имя;
-   - в каждом задании добавьте решение в требуемом виде: текст/код/скриншоты/ссылка;
-   - для корректного добавления скриншотов воспользуйтесь инструкцией [«Как вставить скриншот в шаблон с решением»](https://github.com/netology-code/sys-pattern-homework/blob/main/screen-instruction.md);
-   - при оформлении используйте возможности языка разметки md. Коротко об этом можно посмотреть в [инструкции по MarkDown](https://github.com/netology-code/sys-pattern-homework/blob/main/md-instruction.md).
-4. После завершения работы над домашним заданием сделайте коммит (`git commit -m "comment"`) и отправьте его на Github (`git push origin`).
-5. Для проверки домашнего задания преподавателем в личном кабинете прикрепите и отправьте ссылку на решение в виде md-файла в вашем Github.
-6. Любые вопросы задавайте в чате учебной группы и/или в разделе «Вопросы по заданию» в личном кабинете.
-
-Желаем успехов в выполнении домашнего задания.
 
 ---
 
@@ -23,6 +9,8 @@
 
 *Ответить в свободной форме.*
 
+Схема репликации master-slave использует два и более серверов баз данных, Соответственно, олин из серверов является мастером и все изменения можно производите только на нем а slave только автоматически реплицируют с мастера, Что характерно со слейвов доступно только чтение, записывать на них нельзя
+В случае master-master каждый сервер является и master, и slave одновременно. Можно изменять, удалять, записывать данные на обоих сeрвeрах, что в принципе нехелательно, потому что такая система умножает проблемы вплоть до остановки процесса репликации. Лучше нормально грамотно настроить master-slave
 ---
 
 ### Задание 2
@@ -30,6 +18,13 @@
 Выполните конфигурацию master-slave репликации, примером можно пользоваться из лекции.
 
 *Приложите скриншоты конфигурации, выполнения работы: состояния и режимы работы серверов.*
+
+![Снимок экрана 2023-06-08 181458](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/b2af5909-7f47-4c98-9c97-f199bdd24b89)
+
+![Снимок экрана 2023-06-08 180339](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/b5ea0f6f-5164-449f-90cd-5f90b5d0a68c)
+
+![Снимок экрана 2023-06-08 180754](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/c83f02d0-1780-4fba-a503-595559e73a33)
+
 
 ---
 
@@ -42,4 +37,7 @@
 
 Выполните конфигурацию master-master репликации. Произведите проверку.
 
-*Приложите скриншоты конфигурации, выполнения работы: состояния и режимы работы серверов.*
+![Снимок экрана 2023-06-08 181216](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/2973e754-46cb-45d3-a8b1-78f5515a0b7e)
+
+![Снимок экрана 2023-06-08 181413](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/9eec64f2-bcb9-41db-9a72-a513b946c63e)
+
