--- a/12-06.md
+++ b/12-06.md
@@ -9,7 +9,8 @@
 
 *Ответить в свободной форме.*
 
-Схема репликации master-slave использует два и более сервера баз данных. Соответственно, один из серверов является мастером и все изменения можно производить только на нем а slave только автоматически реплицируют с мастера, Что характерно со слейвов доступно только чтение, записывать на них нельзя
+Схема репликации master-slave использует два и более сервера баз данных. Соответственно, один из серверов является мастером и все изменения можно производить только на нем а slave только автоматически реплицируют с мастера, Что характерно со слейвов доступно только чтение, записывать на них нельзя.
+
 В случае master-master каждый сервер является и master, и slave одновременно. Можно изменять, удалять, записывать данные на обоих сeрвeрах, что в принципе нехелательно, потому что такая система умножает проблемы вплоть до остановки процесса репликации. Лучше нормально грамотно настроить master-slave
 
 ---
