--- a/12-06.md
+++ b/12-06.md
@@ -25,6 +25,8 @@
 
 ![Снимок экрана 2023-06-08 180339](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/b5ea0f6f-5164-449f-90cd-5f90b5d0a68c)
 
+
+Тест репликации:
 ![Снимок экрана 2023-06-08 180754](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/c83f02d0-1780-4fba-a503-595559e73a33)
 
 
@@ -41,5 +43,6 @@
 
 ![Снимок экрана 2023-06-08 181216](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/2973e754-46cb-45d3-a8b1-78f5515a0b7e)
 
+Тест репликации:
 ![Снимок экрана 2023-06-08 181413](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/9eec64f2-bcb9-41db-9a72-a513b946c63e)
 
