--- a/13-01.md
+++ b/13-01.md
@@ -1,19 +1,5 @@
 # Домашнее задание к занятию «Уязвимости и атаки на информационные системы»
 
-### Инструкция по выполнению домашнего задания
-
-1. Сделайте fork [репозитория c шаблоном решения](https://github.com/netology-code/sys-pattern-homework) к себе в Github и переименуйте его по названию или номеру занятия, например, https://github.com/имя-вашего-репозитория/gitlab-hw или https://github.com/имя-вашего-репозитория/8-03-hw).
-2. Выполните клонирование этого репозитория к себе на ПК с помощью команды `git clone`.
-3. Выполните домашнее задание и заполните у себя локально этот файл README.md:
-   - впишите вверху название занятия и ваши фамилию и имя;
-   - в каждом задании добавьте решение в требуемом виде: текст/код/скриншоты/ссылка;
-   - для корректного добавления скриншотов воспользуйтесь инструкцией [«Как вставить скриншот в шаблон с решением»](https://github.com/netology-code/sys-pattern-homework/blob/main/screen-instruction.md);
-   - при оформлении используйте возможности языка разметки md. Коротко об этом можно посмотреть в [инструкции по MarkDown](https://github.com/netology-code/sys-pattern-homework/blob/main/md-instruction.md).
-4. После завершения работы над домашним заданием сделайте коммит (`git commit -m "comment"`) и отправьте его на Github (`git push origin`).
-5. Для проверки домашнего задания преподавателем в личном кабинете прикрепите и отправьте ссылку на решение в виде md-файла в вашем Github.
-6. Любые вопросы задавайте в чате учебной группы и/или в разделе «Вопросы по заданию» в личном кабинете.
-
-Желаем успехов в выполнении домашнего задания.
 
 ------
 
@@ -38,6 +24,46 @@
   
 *Приведите ответ в свободной форме.*  
 
+![Снимок экрана 2023-06-28 183935](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/61fa4833-5dee-4742-aea8-f5728b89d3a3)
+
+Разрешенные сетевеые службы
+21/tcp   open  ftp
+22/tcp   open  ssh
+23/tcp   open  telnet
+25/tcp   open  smtp
+53/tcp   open  domain
+80/tcp   open  http
+111/tcp  open  rpcbind
+139/tcp  open  netbios-ssn
+445/tcp  open  microsoft-ds
+512/tcp  open  exec
+513/tcp  open  login
+514/tcp  open  shell
+1099/tcp open  rmiregistry
+1524/tcp open  ingreslock
+2049/tcp open  nfs
+2121/tcp open  ccproxy-ftp
+3306/tcp open  mysql
+5432/tcp open  postgresql
+5900/tcp open  vnc
+6000/tcp open  X11
+6667/tcp open  irc
+8009/tcp open  ajp13
+8180/tcp open  unknown
+
+На втором скрине показано агрессивное сканирование с флагом -А
+
+![Снимок экрана 2023-06-28 164602](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/12fa6aee-4e11-43ab-9121-c3a97e01f3ad)
+
+Вот примеры уязвимостей
+
+Exploit Title: vsftpd 2.3.4 - Backdoor Command Execution https://www.exploit-db.com/exploits/49757
+Exploit Title: ProFTPD IAC Remote Root Exploit https://www.exploit-db.com/exploits/15449
+CVE-2010-1157: Apache Tomcat information disclosure vulnerability  https://www.exploit-db.com/exploits/12343
+
+
+
+
 ### Задание 2
 
 Проведите сканирование Metasploitable в режимах SYN, FIN, Xmas, UDP.
@@ -50,3 +76,5 @@
 - Как отвечает сервер?
 
 *Приведите ответ в свободной форме.*
+
+
