--- a/13-01.md
+++ b/13-01.md
@@ -27,6 +27,7 @@
 ![Снимок экрана 2023-06-28 183935](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/61fa4833-5dee-4742-aea8-f5728b89d3a3)
 
 Разрешенные сетевеые службы
+
 21/tcp   open  ftp
 
 22/tcp   open  ssh
@@ -80,9 +81,13 @@
 
 Вот примеры уязвимостей
 
+
 Exploit Title: vsftpd 2.3.4 - Backdoor Command Execution https://www.exploit-db.com/exploits/49757
+
 Exploit Title: ProFTPD IAC Remote Root Exploit https://www.exploit-db.com/exploits/15449
+
 CVE-2010-1157: Apache Tomcat information disclosure vulnerability  https://www.exploit-db.com/exploits/12343
+
 
 
 
@@ -99,5 +104,13 @@ CVE-2010-1157: Apache Tomcat information disclosure vulnerability  https://www.e
 - Как отвечает сервер?
 
 *Приведите ответ в свободной форме.*
+
+Режим SYN не завершает процесс установки TCP-соединения. Это самый быстрый вид сканирования в Nmap. SYN-пакеты отправляются к исследуемому порту и если приходит ответ с SYN-ACK, значит, что порт открыт. Если приходит RST-пакет, это означает, что порт закрыт. Поэтому этот вид сканирования простой и быстрый.
+
+FIN-сканирование отправляет TCP-пакет с установленным флагом FIN, который используется для завершения TCP-соединения. По той же логике, если получается ответ RST - значит порт закрыт. Отсутствие ответа обозначает открытый порт. Изза этого времени ожидания, такой тип сканирования медленнее чем режим SYN
+
+В режиме XMAS в TCP пакете отправляются сразу три флага FIN, URG и PSH. Если получен ответ RST - порт закрыт, отсутствие пакета - порт открыт.
+
+UDP-сканирование является самым медленным из четырех типов. UDP-сканирование отправляет пустые UDP-пакеты на исследуемые порты. UDP-соединения в силу спецификации протокола не имеют механизма подтверждения установки соединения, состояние порта определяется либо по ответному ICMP-пакету с сообщением о недоступности, либо по отсутствию ответа предполагается, что порт открыт. Однако, из за отсутствия механизма проверки доставки, отстутствие покета может быть и из за потери пакета. В общем, режим долгий и своеобразный.
 
 
