--- a/12-08.md
+++ b/12-08.md
@@ -1,14 +1,5 @@
 # Домашнее задание к занятию «Резервное копирование баз данных»
 
-**Домашнее задание выполните в Google Docs или в md-файле в вашем репозитории GitHub.** 
-
-Для оформления вашего решения в GitHub можете воспользоваться [шаблоном](https://github.com/netology-code/sys-pattern-homework).
-
-Название файла должно содержать номер лекции и фамилию студента. Пример названия: «12.8. Резервное копирование баз данных — Александр Александров».
-
-Перед тем как выслать ссылку, убедитесь, что её содержимое не является приватным, то есть открыто на просмотр всем, у кого есть ссылка. Если необходимо прикрепить дополнительные ссылки, просто добавьте их в свой Google Docs.
-
-Любые вопросы по решению задач задавайте в чате учебной группы.
 
 ---
 
@@ -23,9 +14,12 @@
 
 1.2. Необходимо восстанавливать данные за час до предполагаемой поломки.
 
-1.3.* Возможен ли кейс, когда при поломке базы происходило моментальное переключение на работающую или починенную базу данных.
 
 *Приведите ответ в свободной форме.*
+
+1.1 - Я думаю, что здесь самый простой и очевидный способ - ежедневный полный FULL BACKUP в нерабочее время по расписанию. Если этот процесс будет слишком ресурсоемким, по его можно будет облегчить, создавая для надежности FULL BACKUP в выходной раз в неделю, а остальные дни потребуется делать инкрементный бекап относительно FULL BACKUP
+
+1.2 Тут также подойдет схема из пункта 1.1, только расписание инкрементного бекапа потребуется установить на создание ежечасного снимка изменений. А еще лучше ежедневный (а не еженедельный) FULL BACKUP и инкрементные бекапы ежечасно в рабочее время.
 
 ---
 
@@ -33,9 +27,18 @@
 
 2.1. С помощью официальной документации приведите пример команды резервирования данных и восстановления БД (pgdump/pgrestore).
 
-2.1.* Возможно ли автоматизировать этот процесс? Если да, то как?
 
 *Приведите ответ в свободной форме.*
+
+
+Команда описана здесь https://www.postgresql.org/docs/current/app-pgdump.html
+
+pg_dump позволяет сделать дамп одной базы , для нескольких баз есть утилита pg_dumpall. Восстановление производится утилитой pg_restore
+
+pg_dump [опции-подключения...] [опции...] [имя-базы-данных]
+pg_restore [опции-подключения...] [опции...] [имя-файла]
+
+
 
 ---
 
@@ -43,10 +46,16 @@
 
 3.1. С помощью официальной документации приведите пример команды инкрементного резервного копирования базы данных MySQL. 
 
-3.1.* В каких случаях использование реплики будет давать преимущество по сравнению с обычным резервным копированием?
+https://dev.mysql.com/doc/mysql-enterprise-backup/4.1/en/mysqlbackup.incremental.html
+
+Тут написано:
+Advanced: Use the following command to create an incremental directory backup using the --incremental-base=dir:directory_path option; the backup is saved at the location specified by --incremental-backup-dir:
+
+Таким образом, используется опция  --incremental-base=dir:НАЗВАНИЕ_ДИРЕКТОРИИ
+
+
 
 *Приведите ответ в свободной форме.*
 
 ---
 
-Задания, помеченные звёздочкой, — дополнительные, то есть не обязательные к выполнению, и никак не повлияют на получение вами зачёта по этому домашнему заданию. Вы можете их выполнить, если хотите глубже шире разобраться в материале.
