--- a/12-08.md
+++ b/12-08.md
@@ -1,23 +1,13 @@
 
 # Домашнее задание к занятию «Резервное копирование баз данных»
 
-**Домашнее задание выполните в Google Docs или в md-файле в вашем репозитории GitHub.** 
-
-Для оформления вашего решения в GitHub можете воспользоваться [шаблоном](https://github.com/netology-code/sys-pattern-homework).
-
-Название файла должно содержать номер лекции и фамилию студента. Пример названия: «12.8. Резервное копирование баз данных — Александр Александров».
-
-Перед тем как выслать ссылку, убедитесь, что её содержимое не является приватным, то есть открыто на просмотр всем, у кого есть ссылка. Если необходимо прикрепить дополнительные ссылки, просто добавьте их в свой Google Docs.
-
-Любые вопросы по решению задач задавайте в чате учебной группы.
-
 ---
 
-@@ -23,30 +14,48 @@
+1.1. Необходимо восстанавливать данные в полном объёме за предыдущий день.
 
 1.2. Необходимо восстанавливать данные за час до предполагаемой поломки.
 
-1.3.* Возможен ли кейс, когда при поломке базы происходило моментальное переключение на работающую или починенную базу данных.
+
 
 *Приведите ответ в свободной форме.*
 
@@ -31,14 +21,15 @@
 
 2.1. С помощью официальной документации приведите пример команды резервирования данных и восстановления БД (pgdump/pgrestore).
 
-2.1.* Возможно ли автоматизировать этот процесс? Если да, то как?
+
 
 *Приведите ответ в свободной форме.*
 
 
 Команда описана здесь https://www.postgresql.org/docs/current/app-pgdump.html
 
-pg_dump позволяет сделать дамп одной базы , для нескольких баз есть утилита pg_dumpall. Восстановление производится утилитой pg_restore
+pg_dump позволяет сделать дамп одной базы , для нескольких баз есть утилита pg_dumpall. 
+Восстановление производится утилитой pg_restore
 
 pg_dump [опции-подключения...] [опции...] [имя-базы-данных]
 pg_restore [опции-подключения...] [опции...] [имя-файла]
@@ -51,7 +42,6 @@ pg_restore [опции-подключения...] [опции...] [имя-фай
 
 3.1. С помощью официальной документации приведите пример команды инкрементного резервного копирования базы данных MySQL. 
 
-3.1.* В каких случаях использование реплики будет давать преимущество по сравнению с обычным резервным копированием?
 https://dev.mysql.com/doc/mysql-enterprise-backup/4.1/en/mysqlbackup.incremental.html
 
 Тут написано:
