--- a/13-02.md
+++ b/13-02.md
@@ -1,19 +1,6 @@
+![Снимок экрана 2023-07-04 202941](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/5972c09a-e406-4bcb-b1c7-b11d2e6972bd)
 # Домашнее задание к занятию  «Защита хоста»
 
-### Инструкция по выполнению домашнего задания
-
-1. Сделайте fork [репозитория c шаблоном решения](https://github.com/netology-code/sys-pattern-homework) к себе в Github и переименуйте его по названию или номеру занятия, например, https://github.com/имя-вашего-репозитория/gitlab-hw или https://github.com/имя-вашего-репозитория/8-03-hw).
-2. Выполните клонирование этого репозитория к себе на ПК с помощью команды `git clone`.
-3. Выполните домашнее задание и заполните у себя локально этот файл README.md:
-   - впишите вверху название занятия и ваши фамилию и имя;
-   - в каждом задании добавьте решение в требуемом виде: текст/код/скриншоты/ссылка;
-   - для корректного добавления скриншотов воспользуйтесь инструкцией [«Как вставить скриншот в шаблон с решением»](https://github.com/netology-code/sys-pattern-homework/blob/main/screen-instruction.md);
-   - при оформлении используйте возможности языка разметки md. Коротко об этом можно посмотреть в [инструкции по MarkDown](https://github.com/netology-code/sys-pattern-homework/blob/main/md-instruction.md).
-4. После завершения работы над домашним заданием сделайте коммит (`git commit -m "comment"`) и отправьте его на Github (`git push origin`).
-5. Для проверки домашнего задания преподавателем в личном кабинете прикрепите и отправьте ссылку на решение в виде md-файла в вашем Github.
-6. Любые вопросы задавайте в чате учебной группы и/или в разделе «Вопросы по заданию» в личном кабинете.
-
-Желаем успехов в выполнении домашнего задания.
 
 ------
 
@@ -26,6 +13,11 @@
 
 *В качестве ответа  пришлите снимки экрана домашнего каталога пользователя с исходными и зашифрованными данными.*  
 
+![Снимок экрана 2023-07-04 192900](https://github.com/AlexanderM33/sdb-homeworks/assets/122460278/8b6809bd-86b0-426d-9d58-30e5341468b5)
+
+![Uploading Снимок экрана 2023-07-04 190314.png…]()
+
+
 ### Задание 2
 
 1. Установите поддержку **LUKS**.
@@ -33,6 +25,9 @@
 3. Зашифруйте созданный раздел с помощью LUKS.
 
 *В качестве ответа пришлите снимки экрана с поэтапным выполнением задания.*
+![Uploading Снимок экрана 2023-07-04 201400.png…]()
+![Uploading Снимок экрана 2023-07-04 193115.png…]()
+
 
 
 ## Дополнительные задания (со звёздочкой*)
